--- a/09-dictionaries.tex
+++ b/09-dictionaries.tex
@@ -752,9 +752,8 @@ Enter file name: mbox-short.txt
 Add code to the above program to figure out who has the 
 most messages in the file.
 
-After all the data has been read  and the dictionary has been
-created, look through the dictionary using a 
-maximum loop
+After all the data has been read and the dictionary has been
+created, look through the dictionary using a maximum loop
  (see Section~\ref{maximumloop})
 to find who has the most 
 messages and print how many messages the person has.
@@ -773,8 +772,8 @@ zqian@umich.edu 195
 \begin{ex}
 This program records the domain name (instead of the address) 
 where the message was sent from instead of who the mail 
-came from (i.e., the whole e-mail address). At the end 
-of the program print out the contents of your dictionary. 
+came from (i.e., the whole email address). At the end 
+of the program, print out the contents of your dictionary. 
 
 \beforeverb
 \begin{verbatim}
