--- a/12-network.tex
+++ b/12-network.tex
@@ -18,22 +18,21 @@ there is built-in support in Python called {\tt sockets} which makes it very
 easy to make network connections and retrieve data over those
 sockets in a Python program.
 
-A {\bf socket} is much like a file, except that it 
-provides a two-way connection between two 
-programs with a single socket.  
+A {\bf socket} is much like a file, except that a single  socket 
+provides a two-way connection between two programs.  
 You can both read from and write to the same socket.  If you write something to 
-a socket it is sent to the application at the other end of the socket.  If you 
+a socket, it is sent to the application at the other end of the socket.  If you 
 read from the socket, you are given the data which the other application has sent.
 
 But if you try to read a socket when the program on the other end of the socket
-has not sent any data - you just sit and wait.  If the programs on both ends
+has not sent any data---you just sit and wait.  If the programs on both ends
 of the socket simply wait for some data without sending anything, they will wait for
 a very long time.
 
 So an important part of programs that communicate over the Internet is to have some
 sort of protocol.   A protocol is a set of precise rules that determine who
-is to go first, what they are to do, and then what are the responses to that message,
-and who sends next and so on.  In a sense the two applications at either end 
+is to go first, what they are to do, and then what the responses are to that message,
+and who sends next, and so on.  In a sense the two applications at either end 
 of the socket are doing a dance and making sure not to step on each other's toes.
 
 There are many documents which describe these network protocols.  The HyperText Transport 
@@ -41,15 +40,15 @@ Protocol is described in the following document:
 
 \url{http://www.w3.org/Protocols/rfc2616/rfc2616.txt}
 
-This is a long and complex 176 page document with a lot of detail.  If you 
-find it interesting feel free to read it all.  But if you take a look around page 36 of
-RFC2616 you will find the syntax for the GET request.  If you read in detail, you will
-find that to request a document from a web server, we make a connection to 
-the {\tt www.py4inf.com} server on port 80, and then send a line of the form:
+This is a long and complex 176-page document with a lot of detail.  If you 
+find it interesting, feel free to read it all.  But if you take a look around page 36 of
+RFC2616 you will find the syntax for the GET request.  To request a document from a web
+server, we make a connection to the {\tt www.py4inf.com} server on port 80, and then
+send a line of the form
 
 {\tt GET http://www.py4inf.com/code/romeo.txt HTTP/1.0 }
 
-Where the second parameter is the web page we are requesting and then 
+where the second parameter is the web page we are requesting, and then 
 we also send a blank line.  The web server will respond with some 
 header information about the document and a blank line
 followed by the document content.
@@ -57,9 +56,9 @@ followed by the document content.
 \section{The World's Simplest Web Browser}
 
 Perhaps the easiest way to show how the HTTP protocol works is to write a very 
-simple Python program that makes a connection to a web server and following
-the rules of the HTTP protocol, requests a document 
-and displays what the server sends back.
+simple Python program that makes a connection to a web server and follows
+the rules of the HTTP protocol to requests\ a document 
+and display what the server sends back.
 
 \beforeverb
 \begin{verbatim}
@@ -81,7 +80,7 @@ mysock.close()
 %
 First the program makes a connection to port 80 on 
 the server \url{www.py4inf.com}.
-Since our program is playing the role of the ``web browser'' the HTTP
+Since our program is playing the role of the ``web browser'', the HTTP
 protocol says we must send the GET command followed by a blank line.
 
 \beforefig
@@ -89,8 +88,8 @@ protocol says we must send the GET command followed by a blank line.
 \afterfig
 
 Once we send that blank line, we write a loop that receives data 
-in 512 character chunks from the socket and prints the data out 
-until there is no more data to read (i.e. the recv() returns 
+in 512-character chunks from the socket and prints the data out 
+until there is no more data to read (i.e., the recv() returns 
 an empty string).
 
 The program produces the following output:
@@ -116,11 +115,11 @@ Who is already sick and pale with grief
 %
 The output starts with headers which the web server sends
 to describe the document.
-For example, the {\tt Content-Type } header indicated that
+For example, the {\tt Content-Type} header indicates that
 the document is a plain text document ({\tt text/plain}).
 
 After the server sends us the headers, it adds a blank line
-to indicate the end of the headers and then sends the actual
+to indicate the end of the headers, and then sends the actual
 data of the file {\tt romeo.txt}.
 
 This example shows how to make a low-level network connection
@@ -131,10 +130,9 @@ the protocol and write the code to send and receive the data
 according to the protocol.
 
 However, since the protocol that we use most commonly is
-the HTTP (i.e. the web) protocol, Python has a special 
+the HTTP web protocol, Python has a special 
 library specifically designed to support the HTTP protocol 
-for the retrieval of
-documents and data over the web.
+for the retrieval of documents and data over the web.
 
 \section{Retrieving an image over HTTP}
 
@@ -146,7 +144,7 @@ which had newlines in the file and we simply copied the
 data to the screen as the program ran.   We can use a similar
 program to retrieve an image across using HTTP.   Instead
 of copying the data to the screen as the program runs,
-we accumulate the data in a string, trim off the headers
+we accumulate the data in a string, trim off the headers,
 and then save the image data to a file as follows:
 
 \beforeverb
@@ -213,31 +211,30 @@ Content-Type: image/jpeg
 \afterverb
 %
 You can see that for this url, the 
-{\tt Content-Type } header indicates that
+{\tt Content-Type} header indicates that
 body of the document is an image ({\tt image/jpeg}).
 Once the program completes, you can view the image data by opening
 the file {\tt stuff.jpg} in an image viewer.
 
-As the program runs, 
-can see that we don't get 5120 characters each time we 
-call the {\tt recv()} method.
-We get as many characters that have been transferred across the network 
+As the program runs, you can see that we don't get 5120 characters
+each time we call the {\tt recv()} method.
+We get as many characters as have been transferred across the network 
 to us by the web server at the moment we call {\tt recv()}.  
-In this example, we either get 1460 or
-2920 characters each time we request up to 5120 characters of data.
+In this example, we either get 1460 or 2920 characters each time we
+request up to 5120 characters of data.
 
 Your results may be different depending on your network speed.  Also
-note that on the last call to {\tt recv()} we get 1681 bytes which is the end
-of the stream and in the next call to {\tt recv()} we get a zero length
+note that on the last call to {\tt recv()} we get 1681 bytes, which is the end
+of the stream, and in the next call to {\tt recv()} we get a zero-length
 string that tells us that the server has called {\tt close()} on its end 
 of the socket and there is no more data forthcoming.
 
 \index{time}
 \index{time.sleep}
-We can slow down our successive calls {\tt recv()} by uncommmenting the call 
+We can slow down our successive {\tt recv()} calls by uncommenting the call 
 to {\tt time.sleep()}.  This way, we wait a quarter of a second after each call
 so that the server can ``get ahead'' of us and send more data to us
-before we call {\tt recv()}.  With the delay in place the program 
+before we call {\tt recv()} again.  With the delay, in place the program 
 executes as follows:
 \beforeverb
 \begin{verbatim}
@@ -301,7 +298,7 @@ for line in fhand:
 \afterverb
 %
 Once the web page has been opened with 
-{\tt urllib.urlopen} we can treat it like 
+{\tt urllib.urlopen}, we can treat it like 
 a file and read through it using a 
 {\tt for} loop.   
 
@@ -349,7 +346,7 @@ we can read it like a local file.
 
 One of the common uses of the {\tt urllib} capability in Python is 
 to {\bf scrape} the web.   Web scraping is when we write a program
-that pretends to be a web browser and retrieves pages and then 
+that pretends to be a web browser and retrieves pages, then 
 examines the data in those pages looking for patterns.
 
 As an example, a search engine such as Google will look at the source 
@@ -360,12 +357,12 @@ the web.
 
 Google also uses the frequency of links from pages it finds 
 to a particular page as one measure of how ``important'' 
-a page is and how highly the page should appear in its search results.
+a page is and how high the page should appear in its search results.
 
-\section{Parsing HTML using Regular Expressions}
+\section{Parsing HTML using regular expressions}
 
 One simple way to parse HTML is to use regular expressions to repeatedly
-search and extract for substrings that match a particular pattern.
+search for and extract substrings that match a particular pattern.
 
 Here is a simple web page:
 
@@ -390,8 +387,8 @@ href="http://.+?"
 \afterverb
 %
 Our regular expression looks for strings that start with
-``href="http://'' followed by one or more characters
-``.+?'' followed by another double quote.  The question mark 
+``href="http://'', followed by one or more characters
+(``.+?''), followed by another double quote.  The question mark 
 added to the ``.+?'' indicates that the match is to be done
 in a ``non-greedy'' fashion instead of a ``greedy'' fashion.  
 A non-greedy match tries to find the {\em smallest} possible matching
@@ -400,8 +397,8 @@ matching string.
 \index{greedy}
 \index{non-greedy}
 
-We need to add parentheses to our regular expression to indicate
-which part of our matched string we would like to extract and
+We add parentheses to our regular expression to indicate
+which part of our matched string we would like to extract, and
 produce the following program:
 \index{regex!parentheses}
 \index{parentheses!regular expression}
@@ -441,11 +438,10 @@ http://www.py4inf.com/py4inf-slides.zip
 \end{verbatim}
 \afterverb
 %
-Regular expressions work very nice when your HTML is well-formatted
-and predictable.  But since there is a lot of ``broken'' HTML pages
-out there, you might find that a solution only using 
-regular expressions might either miss some valid links or end up 
-with bad data.
+Regular expressions work very nicely when your HTML is well formatted
+and predictable.  But since there are a lot of ``broken'' HTML pages
+out there, a solution only using regular expressions might either miss
+some valid links or end up with bad data.
 
 This can be solved by using a robust HTML parsing library.
 
@@ -462,13 +458,13 @@ and extract links using the {\bf BeautifulSoup} library.
 You can download and install the BeautifulSoup code
 from:
 
-\url{www.crummy.com}
+\url{http://www.crummy.com/software/}
 
 You can download and ``install'' BeautifulSoup or you 
 can simply place the {\tt BeautifulSoup.py} file in the
 same folder as your application.
 
-Even though HTML looks like XML and some pages are carefully 
+Even though HTML looks like data-friendly XML and some pages are carefully 
 constructed to be XML, most HTML is generally broken in ways
 that cause an XML parser to reject the entire page of HTML as
 improperly formed.  BeautifulSoup tolerates highly flawed 
@@ -561,19 +557,18 @@ Attrs: [(u'href', u'http://www.dr-chuck.com/page2.htm')]
 These examples only begin to show the power of BeautifulSoup
 when it comes to parsing HTML.  See the documentation 
 and samples at
-\url{www.crummy.com}
-for more detail.
+\url{http://www.crummy.com/software/BeautifulSoup/} for more detail.
 
 \section{Reading binary files using urllib}
 
 Sometimes you want to retrieve a non-text (or binary) file such as
 an image or video file. The data in these files is generally not 
-useful to print out but you can easily make a copy of a URL to a local
+useful to print out, but you can easily make a copy of a URL to a local
 file on your hard disk using {\tt urllib}.
 \index{binary file}
 
 The pattern is to open the URL and use {\tt read} to download the entire
-contents of the document into a string variable ({\tt img}) and then write that
+contents of the document into a string variable ({\tt img}) then write that
 information to a local file as follows:
 
 \beforeverb
@@ -586,8 +581,8 @@ fhand.close()
 \afterverb
 %
 This program reads all of the data in at once across the network and 
-stores it in the variable {\tt img} in the main memory of your computer
-and then opens the file {\tt cover.jpg} and writes the data out to your 
+stores it in the variable {\tt img} in the main memory of your computer,
+then opens the file {\tt cover.jpg} and writes the data out to your 
 disk.  This will work if the size of the file is less than the size
 of the memory of your computer.
 
@@ -595,7 +590,7 @@ However if this is a large audio or video file, this program may crash
 or at least run extremely slowly when your computer runs out of memory.
 In order to avoid running out of memory, we retrieve the data in blocks
 (or buffers) and then write each block to your disk before retrieving
-the next block.  This way the program can read any sized file without
+the next block.  This way the program can read any size file without
 using up all of the memory you have in your computer.
 
 \beforeverb
@@ -632,7 +627,7 @@ python curl2.py
 %
 
 If you have a Unix or Macintosh computer, you probably have a command
-built into your operating system that performs this operation
+built in to your operating system that performs this operation
 as follows:
 \index{curl}
 
@@ -646,7 +641,7 @@ The command {\tt curl} is short for ``copy URL'' and so these two
 examples are cleverly named {\tt curl1.py} and {\tt curl2.py} on 
 \url{www.py4inf.com/code} as they implement similar functionality
 to the {\tt curl} command.  There is also a {\tt curl3.py} sample 
-program that does this task a little more effectively in case you
+program that does this task a little more effectively, in case you
 actually want to use this pattern in a program you are writing.
 
 \section{Glossary}
@@ -664,12 +659,12 @@ from
 
 \item[port:] A number that generally indicates which application 
 you are contacting when you make a socket connection to a server.
-As an example, web traffic usually uses port 80 while e-mail 
+As an example, web traffic usually uses port 80 while email 
 traffic uses port 25.
 \index{port}
 
 \item[scrape:] When a program pretends to be a web browser and
-retrieves a web page and then looks at the web page content. 
+retrieves a web page, then looks at the web page content. 
 Often programs are following the links in one page to find the next
 page so they can traverse a network of pages or a social network.
 \index{socket}
@@ -716,7 +711,7 @@ Change the {\tt urllinks.py} program to extract and count
 paragraph (p) tags from the retrieved HTML document and 
 display the count of the paragraphs as the 
 output of your program.  
-Do not display the paragraph text - only count them.
+Do not display the paragraph text, only count them.
 Test your program on several small web pages
 as well as some larger web pages.
 \end{ex}
@@ -724,7 +719,7 @@ as well as some larger web pages.
 \begin{ex}
 (Advanced) Change the socket program so that it only shows data after the 
 headers and a blank line have been received.  Remember that {\tt recv} is
-receiving characters (newlines and all) - not lines.
+receiving characters (newlines and all), not lines.
 \end{ex}
 
 
