--- a/12-network.tex
+++ b/12-network.tex
@@ -464,7 +464,8 @@ You can download and ``install'' BeautifulSoup or you
 can simply place the {\tt BeautifulSoup.py} file in the
 same folder as your application.
 
-Even though HTML looks like data-friendly XML and some pages are carefully 
+Even though HTML looks like XML\footnote{The XML format is described in
+the next chapter.} and some pages are carefully 
 constructed to be XML, most HTML is generally broken in ways
 that cause an XML parser to reject the entire page of HTML as
 improperly formed.  BeautifulSoup tolerates highly flawed 
