--- a/13-web.tex
+++ b/13-web.tex
@@ -7,7 +7,7 @@ Once it became easy to retrieve documents and parse documents
 over HTTP using programs, it did not take long to develop 
 an approach where we started producing documents that were specifically
 designed to be consumed by other 
-programs (i.e. not HTML to be displayed in a browser).
+programs (i.e., not HTML to be displayed in a browser).
 
 There are two common formats that we use when exchanging data across the web.
 The ``eXtensible Markup Language'' or XML has been in use for a very long time 
@@ -69,13 +69,13 @@ print 'Attr:',tree.find('email').get('hide')
 \afterverb
 %
 Calling {\tt fromstring} converts the string representation
-of the XML into a 'tree' of XML nodes.  When the
-XML is in a tree, we have a series of methods which we can call to 
+of the XML into a ``tree'' of XML nodes.  When the
+XML is in a tree, we have a series of methods we can call to 
 extract portions of data from the XML.  
 
 The {\tt find} function searches through the 
 XML tree and retrieves a {\bf node} that matches the specified tag.
-Each node can have some text, some attributes (i.e. like hide) and
+Each node can have some text, some attributes (like hide), and
 some ``child'' nodes.   Each node can be the top of a tree of nodes.
 
 \beforeverb
@@ -128,7 +128,7 @@ for item in lst:
 \end{verbatim}
 \afterverb
 %
-The {\tt findall} method retrieves a Python list of sub-trees that
+The {\tt findall} method retrieves a Python list of subtrees that
 represent the {\tt user} structures in the XML tree.  Then we can 
 write a {\tt for} loop that looks at each of the user nodes, and 
 prints the {\tt name} and {\tt id} text elements as well as the 
@@ -174,10 +174,10 @@ Here is a JSON encoding that is roughly equivalent to the simple XML from above:
 \afterverb
 %
 You will notice some differences.  First, in XML, we can add attributes like
-``intl'' to the ``phone'' tag.  In JSON we simply have key-value pairs.  Also
-the XML ``person'' tag is gone, replaced by a set of outer curly-braces.  
+``intl'' to the ``phone'' tag.  In JSON, we simply have key-value pairs.  Also
+the XML ``person'' tag is gone, replaced by a set of outer curly braces.  
 
-In general JSON structures are simpler than XML because JSON has fewer capabilities
+In general, JSON structures are simpler than XML because JSON has fewer capabilities
 than XML.  But JSON has the advantage that it maps {\em directly} to some combination
 of dictionaries and lists.   And since nearly all programming languages 
 have something equivalent to Python's dictionaries and lists, JSON is a very
@@ -189,14 +189,14 @@ applications because of its relative simplicity compared to XML.
 \section{Parsing JSON}
 
 We construct our JSON by nesting dictionaries (objects) and lists as needed.  In 
-this example we represent a list of users where each user is a set of 
-key value pairs (i.e. a dictionary).  So we have a list of dictionaries.
+this example, we represent a list of users where each user is a set of 
+key-value pairs (i.e., a dictionary).  So we have a list of dictionaries.
 
-In the following program, we use the built-in {\bf json} library parse 
+In the following program, we use the built-in {\bf json} library to parse 
 the JSON and read through the data.   Compare this closely to the equivalent
-XML data and code above.  The JSON has less detail so we must know in advance 
-that we are getting a list, and the list is of users and each user is a set of 
-key value pairs.  The JSON is more succinct (an advantage) but also is 
+XML data and code above.  The JSON has less detail, so we must know in advance 
+that we are getting a list and that the list is of users and each user is a
+set of key-value pairs.  The JSON is more succinct (an advantage) but also is 
 less self-describing (a disadvantage).
 
 \beforeverb
@@ -211,7 +211,7 @@ input = '''
   } ,
   { "id" : "009",
     "x" : "7",
-    "name" : "Chuck"
+    "name" : "Brent"
   } 
 ]'''
 
@@ -227,13 +227,11 @@ for item in info:
 %
 
 If you compare the code to extract data from the parsed JSON and XML
-you will see that what we get from {\bf json.loads()} 
-is a Python list which we traverse with 
-a {\bf for} loop and each item within that list
-is a Python dictionary which we use the Python
-index operator to extract the various bits of each user.   Once the JSON has
-been parsed - we simply have native Python objects and structures.  We don't
-have to use the JSON library to dig through the parsed JSON since the returned
+you will see that what we get from {\bf json.loads()} is a Python list
+which we traverse with a {\tt for} loop, and each item within that list
+is a Python dictionary.  Once the JSON has been parsed, we can use the Python
+index operator to extract the various bits of data for each user.  We don't
+have to use the JSON library to dig through the parsed JSON, since the returned
 data is simply native Python structures.
 
 The output of this program is exactly the same as the XML version above.
@@ -258,7 +256,7 @@ But XML is more self-descriptive than JSON and so there are
 some applications where XML retains an advantage.  For example, most word 
 processors store documents internally using XML rather than JSON.
 
-\section{Application Programming Interfaces (API)}
+\section{Application Programming Interfaces
 
 We now have the ability to exchange data between applications using HyperText
 Transport Protocol (HTTP) and a way to represent complex data that we are 
@@ -270,7 +268,7 @@ applications using these techniques. The general name for these
 application-to-application contracts is {\bf Application Program 
 Interfaces} or APIs.  When we use an API, generally one program
 makes a set of {\bf services} available for use by other applications
-and publishes the APIs (i.e. the ``rules'') that must be followed to 
+and publishes the APIs (i.e., the ``rules'') that must be followed to 
 access the services provided by the program.
 
 When we begin to build our programs where the functionality of
@@ -278,7 +276,7 @@ our program includes access to services provided by other programs,
 we call the approach a {\bf Service-Oriented Architecture} or SOA.
 A SOA approach is one where our overall application makes use of 
 the services of other applications.  A non-SOA approach is where the
-application is a single stand-alone application which contains all of the
+application is a single standalone application which contains all of the
 code necessary to implement the application.
 
 We see many examples of SOA when we use the web.  We can go to a single 
@@ -288,7 +286,7 @@ Instead, the airline computers contact the services on the hotel computers
 and retrieve the hotel data and present it to the user.  When the user
 agrees to make a hotel reservation using the airline site, the airline site uses
 another web service on the hotel systems to actually make the reservation.
-And when it comes to charge your credit card for the whole transaction, 
+And when it comes time to charge your credit card for the whole transaction, 
 still other computers become involved in the process.
 
 \beforefig
@@ -296,10 +294,10 @@ still other computers become involved in the process.
 \afterfig
 
 A Service-Oriented Architecture has many advantages including: (1) we 
-always maintain only one copy of data - this is particularly important
-for things like hotel reservations where we do not want to over-commit
+always maintain only one copy of data (this is particularly important
+for things like hotel reservations where we do not want to over-commit)
 and (2) the owners of the data can set the rules about the use of their 
-data.   With these advantages, a SOA system must be carefully designed
+data.   With these advantages, an SOA system must be carefully designed
 to have good performance and meet the user's needs.
 
 When an application makes a set of services in its API available over the web, 
@@ -314,11 +312,11 @@ Google has an excellent web service that allows us to make use of their
 large database of geographic information.   We can submit a geographical
 search string like ``Ann Arbor, MI'' to their geocoding API and have Google 
 return its best guess as to where on a map we might find our search string and
-tells us about the landmarks nearby.
+tell us about the landmarks nearby.
 
 The geocoding service is free but rate limited so you cannot make unlimited
 use of the API in a commercial application.   But if you have some survey data
-where an end-user has entered a location in a free-format input box, you can use
+where an end user has entered a location in a free-format input box, you can use
 this API to clean up your data quite nicely.  
 
 {\em When you are using a free API like Google's geocoding API, you need
@@ -332,12 +330,11 @@ browser:
 
 \url{http://maps.googleapis.com/maps/api/geocode/json?sensor=false &address=Ann+Arbor%2C+MI}
 
-Make sure to un-wrap the URL and remove any spaces from the URL before pasting
+Make sure to unwrap the URL and remove any spaces from the URL before pasting
 it into your browser.
 
-The following is a simple application to prompt the user for a search string
-and call the Google geocoding API and extract information from the returned
-JSON.
+The following is a simple application to prompt the user for a search string,
+call the Google geocoding API, and extract information from the returned JSON.
 
 \beforeverb
 \begin{verbatim}
@@ -381,8 +378,8 @@ Unlike a fixed web page, the data we get depends on the parameters
 we send and the geographical data stored in Google's servers.
 
 Once we retrieve the JSON data, we parse it with the {\bf json}
-library and do a few checks to make sure that we received good data 
-and then extract the information that we are looking for.
+library and do a few checks to make sure that we received good data, 
+then extract the information that we are looking for.
 
 The output of the program is as follows (some of the returned
 JSON has been removed):
@@ -444,7 +441,7 @@ general idea is that they want to know who is using
 their services and how much each user is using.  
 Perhaps they have free and pay tiers of their services
 or have a policy that limits the number of requests 
-that a single individual can during a particular 
+that a single individual can make during a particular 
 time period.
 
 Sometimes once you get your API key, you simply include
@@ -462,15 +459,14 @@ You can read more about the OAuth protocol at
 As the Twitter API became increasingly valuable, Twitter
 went from an open and public API to an API that required
 the use of OAuth signatures on each API request. Thankfully
-there are a number of convenient and free OAuth libraries
-
+there are still a number of convenient and free OAuth libraries
 so you can avoid writing an OAuth implementation from scratch
 by reading the specification.  These libraries are of 
-varying complexity and have varying 
+varying complexity and have varying degrees of
 richness.  The OAuth web site has information about various 
 OAuth libraries.
 
-For this next sample program we will download these files: 
+For this next sample program we will download the files 
 {\bf twurl.py}, {\bf hidden.py}, 
 {\bf oauth.py}, 
 and
@@ -578,14 +574,14 @@ Enter Twitter Account:
 %
 Along with the returned timeline data, Twitter also returns
 metadata about the request in the HTTP response headers. 
-One header in particular, {\bf x-rate-limit-remaining} informs
+One header in particular, {\bf x-rate-limit-remaining}, informs
 us how many more requests we can make before we will be shut 
 off for a short time period.  You can see that our remaining 
 retrievals drop by one each time we make a request to the 
 API.
 
-In the following example, we retrieve a user's Twitter friends
-and parse the returned JSON and extract some of the information
+In the following example, we retrieve a user's Twitter friends,
+parse the returned JSON, and extract some of the information
 about the friends.  We also dump the JSON after parsing and
 ``pretty-print'' it with an indent of four characters to allow
 us to pore through the data when we want to extract more fields.
@@ -620,7 +616,7 @@ while True:
 \afterverb
 %
 Since the JSON becomes a set of nested Python lists and dictionaries,
-we can use a combination of the index operation and for loops to 
+we can use a combination of the index operation and {\tt for} loops to 
 wander through the returned data structures with very little 
 Python code.
 
@@ -678,14 +674,14 @@ Enter Twitter Account:
 The last bit of the output is where we see the for loop reading the
 five most recent ``friends'' of the {\bf drchuck} Twitter account 
 and printing the most recent status for each friend. There is a 
-great deal more data available in the returned JSON.  Also if you look
-in the output of the program, you can see that the ``find the friends''
+great deal more data available in the returned JSON.  If you look
+in the output of the program, you can also see that the ``find the friends''
 of a particular account has a different rate limitation than 
 the number of timeline queries we are allowed to run per time period.
 
 These secure API keys allow Twitter to have solid confidence that they 
-know who is using their API and data and at what level.   The rate
-limiting approach allows us to do simple, personal data retrievals but
+know who is using their API and data and at what level.   The 
+rate-limiting approach allows us to do simple, personal data retrievals but
 does not allow us to build a product that pulls data from their API 
 millions of times per day.
 
@@ -701,23 +697,18 @@ two application components.
 \item[ElementTree:] A built-in Python library used to parse XML data.
 \index{ElementTree}
 
-\item[JSON:] JavaScript Object Notation- A format that allows for 
+\item[JSON:] JavaScript Object Notation. A format that allows for 
 the markup of structured data based on the syntax of JavaScript
 Objects.
 \index{JSON}
 \index{JavaScript Object Notation}
 
-\item[REST:] REpresentational State Transfer - A style of Web Services 
-that provide access to resources within an application using the HTTP
-protocol.
-\index{ElementTree}
-
-\item[SOA:] Service Oriented Architecture - when an application is 
+\item[SOA:] Service-Oriented Architecture. When an application is 
 made of components connected across a network.
 \index{SOA}
 \index{Service Oriented Architecture}
 
-\item[XML:] eXtensible Markup Language - A format that allows for 
+\item[XML:] eXtensible Markup Language. A format that allows for 
 the markup of structured data.
 \index{XML}
 \index{eXtensible Markup Language}
