Tweakage, fix one bug.

--- a/13-web.tex
+++ b/13-web.tex
@@ -256,7 +256,7 @@ But XML is more self-descriptive than JSON and so there are
 some applications where XML retains an advantage.  For example, most word 
 processors store documents internally using XML rather than JSON.
 
-\section{Application Programming Interfaces
+\section{Application Programming Interfaces}
 
 We now have the ability to exchange data between applications using HyperText
 Transport Protocol (HTTP) and a way to represent complex data that we are 
